--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
 }
 
 .story-image {
-    width: 50%;
-    height:50%;
+    width: 50vw;
+    height:50vh;
     font-size: 10px;
 }
 .half {
